--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
         <module>web</module>
     </modules>
 
+    <distributionManagement>
+     <repository>
+       <id>internal.repo</id>
+       <name>Demo internal repo</name>
+       <url>http://18.195.91.166:8081/repository/maven-releases/</url>
+     </repository>
+    </distributionManagement>
+         
     <build>
         <pluginManagement>
             <plugins>
